# sea_orm_buddy_supplement

./: Cargo.toml  README.md  crawler_idea.md  local.db
data/microplastics_kitchen/: microplastics_kitchen.md
oxymouse_rs/: Cargo.toml  folder.md
oxymouse_rs/src/: mouse.rs
oxymouse_rs/src/algorithms/: base.rs  bezier.rs  bezier_old.rs  gaussian.rs  mod.rs  perlin.rs
oxymousealg/: Cargo.toml
src/: fetcher.rs  main.rs  main_database.rs  main_user.rs  plotter.rs  utils.rs
src/converter/: sitemap.rs
src/crawler/: sitemap.rs
src/fetcher/: sitemap.rs
src/migration/: m20240101_000001_create_users_table.rs  m20240101_000002_create_supplement_table.rs  mod.rs
src/stealth_crawling/: howTo.md
supplement/: Cargo.toml
supplement/src/: main.rs  main_supplement.rs  supplement.rs
user/: Cargo.toml  user.rs
