[package]
name = "sea_orm_buddy_supplement"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.13.2"
headless_chrome = "1.0.21"
rand = "0.8"
ammonia = "4.0"
html2md = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
spider = { version = "1.99.37", features = ["chrome", "chrome_stealth", "ua_generator", "real_browser"] }


[workspace]
members = [
    "supplement",
    "user"]

resolver = "2"