[package]
name = "sea_orm_buddy_supplement"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.13.2"
headless_chrome = "1.0.21"
oxymouse_rs = { path = "oxymouse_rs" }
noise = "0.9.0"


[workspace]
members = ["oxymouse_rs",
    "supplement",
    "user"]

resolver = "2"
