[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }